--- a/.github/workflows/check_cron.yaml
+++ b/.github/workflows/check_cron.yaml
@@ -28,9 +28,9 @@ jobs:
             username=$(echo "$account" | jq -r '.username')
             password=$(echo "$account" | jq -r '.password')
             ssh=$(echo "$account" | jq -r '.ssh')
-
             echo "echo \"Executing for $username@$ssh\"" >> sshpass.sh
-            echo "sshpass -p '$password' ssh -o StrictHostKeyChecking=no '$username@$ssh' " >> sshpass.sh
+            echo "echo \"Starting SSH session for $username@$ssh\"" >> sshpass.sh
+            echo "sshpass -p '$password' ssh -t -o StrictHostKeyChecking=no '$username@$ssh' || echo 'Error executing command for $username@$ssh'" >> sshpass.sh
           done < <(jq -c '.[]' accounts.json)
           chmod +x sshpass.sh
 
